--- a/index.html
+++ b/index.html
@@ -41,11 +41,22 @@
         font-weight: 600;
         font-size: 74px;
         line-height: 85px;
-        background-image: linear-gradient(265.07deg, #f6d365 10%, #fda085 100%);
+        background-image: linear-gradient(to bottom right, #f6d365 10%, #fda085 100%);
         -webkit-background-clip: text;
         -moz-background-clip: text;
         -webkit-text-fill-color: transparent;
         -moz-text-fill-color: transparent;
+        background-size:200% 200%;     
+        animation: animatedText 5s infinite linear;
+      }
+      @keyframes animatedText {
+        0% {
+          background-position:100% 100%; 
+        }
+
+        100% {
+          background-position:0 0; 
+        }
       }
 
       .btn {
@@ -117,16 +128,24 @@
           font-weight: normal;
           font-size: 40px;
           line-height: 50px;
-          background-image: linear-gradient(
-            265.07deg,
-            #f6d365 10%,
-            #fda085 100%
-          );
+          background-image: linear-gradient(to bottom right, #f6d365 10%, #fda085 100%);
           -webkit-background-clip: text;
           -moz-background-clip: text;
           -webkit-text-fill-color: transparent;
           -moz-text-fill-color: transparent;
+          background-size:200% 200%;     
+          animation: animatedText 10s infinite linear;
         }
+
+        @keyframes animatedText {
+        0% {
+          background-position:100% 100%; 
+        }
+
+        100% {
+          background-position:0 0; 
+        }
+      }
 
         .content2 {
           font-family: Gilroy-Medium;
