--- a/index.html
+++ b/index.html
@@ -15,7 +15,34 @@
         font-style: normal;
         font-display: swap;
       }
+      @font-face {
+        font-family: "Gilroy-SemiBold";
+        src: url("gilroy-semibold-webfont.woff2") format("woff2"),
+          url("gilroy-semibold-webfont.woff") format("woff");
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: "Gilroy-Medium";
+        src: url("gilroy-medium-webfont.woff2") format("woff2"),
+          url("gilroy-medium-webfont.woff") format("woff");
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
       .content1 {
+        display: none;
+        font-family: "Helvetica";
+        font-style: normal;
+        font-weight: normal;
+        color: white;
+        font-size: 74px;
+        line-height: 85px;
+        text-align: center;
+      }
+      .hidden_content {
+        display: none;
         font-family: "Helvetica";
         font-style: normal;
         font-weight: normal;
@@ -25,7 +52,7 @@
         text-align: center;
       }
       .content2 {
-        font-family: "Gilroy", sans-serif;
+        font-family: 'Gilroy-Medium';
         font-size: 32px;
         line-height: 37px;
         text-align: center;
@@ -47,7 +74,7 @@
         -webkit-text-fill-color: transparent;
         -moz-text-fill-color: transparent;
         background-size:200% 200%;     
-        animation: animatedText 5s infinite linear;
+        animation: animatedText 3s infinite linear;
       }
       @keyframes animatedText {
         0% {
@@ -81,15 +108,12 @@
         font-weight: 400;
         line-height: 35px;
         text-align: center;
-        -webkit-text-stroke: 1px #050505;
       }
 
-      .stroke1 {
+      .stroke {
         -webkit-text-stroke: 2px #ffffff;
       }
-      .stroke2 {
-        -webkit-text-stroke: 2px #ffffff;
-      }
+      
       .flex-container {
         display: flex;
         flex: 1 1 0%;
@@ -99,7 +123,20 @@
         align-items: center;
       }
 
-      @media only screen and (max-width: 620px) {
+      @media only screen and (min-width:768px){
+        .content1 {
+          display: block;
+          font-family: "Helvetica";
+          font-style: normal;
+          font-weight: normal;
+          color: white;
+          font-size: 74px;
+          line-height: 85px;
+          text-align: center;
+        }
+      }
+
+      @media only screen and (max-width: 425px) {
         .flex-container {
           background-color: #050505;
           display: flex;
@@ -107,7 +144,8 @@
           align-items:flex-start;  
           margin-left: 30px;      
         }
-        .content1 {
+        .hidden_content {
+          display: block;
           text-align: left;
           font-family: Helvetica;
           font-style: normal;
@@ -116,10 +154,9 @@
           line-height: 50px;
         }
 
-        .stroke1::after {
-          content: "\a";
-          white-space: pre;
-        }
+        .stroke {
+        -webkit-text-stroke: 2px #ffffff;
+      }
 
         .gradient1 {
           font-family: Helvetica;
@@ -134,7 +171,7 @@
           -webkit-text-fill-color: transparent;
           -moz-text-fill-color: transparent;
           background-size:200% 200%;     
-          animation: animatedText 10s infinite linear;
+          animation: animatedText 3s infinite linear;
         }
 
         @keyframes animatedText {
@@ -148,7 +185,7 @@
       }
 
         .content2 {
-          font-family: Gilroy-Medium;
+          font-family:'Gilroy-Medium';
           text-align: left;
           margin-top: 50px;
           font-size: 16px;
@@ -166,24 +203,32 @@
           border-radius: 50px;
         }
         .text {
-          font-family: Gilroy-SemiBold;
+          font-family:'Gilroy-SemiBold';
           font-size: 16px;
           line-height: 19px;
           text-align: center;
           color: #050505;
         }
       }
+
     </style>
   </head>
 
   <body class="flex-container">
     <div style="max-width: 1240px">
       <div class="content1">
-        <span class="stroke1">We</span> <span class="gradient1">Design</span
-        ><span class="stroke2"> & </span><span class="gradient1">Build</span
-        ><span class="stroke2">
-          Digital Products <span class="stroke1">for the 21st</span><span class="stoke1"> Century.</span
+        <span class="stroke">We</span> <span class="gradient1">Design</span
+        ><span class="stroke"> & </span><span class="gradient1">Build</span
+        ><span class="stroke">
+          Digital Products <span class="stroke">for the 21st</span><span class="stoke"> Century.</span
         >
+      </div>
+      <div class="hidden_content">
+        <div class="stroke">We</div> <div><span class="gradient1">Design</span
+        ><span class="stroke"> & </span><span class="gradient1">Build</span
+        ></div> <div><span class="stroke">
+          Digital Products</div><div> <span class="stroke">for the 21st</span></div>
+          <div><span class="stroke"> Century.</span></div>
       </div>
       <div class="content2">
         Strategy, Design, Development, Business Automation, Consultancy.
