--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
           text-align: center;
         }
       }
+      @media only screen and (min-width:426px){
+        .content1 {
+          display: block;
+          font-family: "Helvetica";
+          font-style: normal;
+          font-weight: normal;
+          color: white;
+          font-size: 74px;
+          line-height: 85px;
+          text-align: center;
+        }
+      }
 
       @media only screen and (max-width: 425px) {
         .flex-container {
