--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       }
 
       .text {
-        font-family: "Gilroy", sans-serif;
+        font-family: 'Gilroy-SemiBold';
         font-size: 30px;
         font-weight: 400;
         line-height: 35px;
