--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         -webkit-text-fill-color: transparent;
         -moz-text-fill-color: transparent;
         background-size:200% 200%;     
-        animation: animatedText 3s infinite linear;
+        animation: animatedText 3s infinite alternate;
       }
       @keyframes animatedText {
         0% {
@@ -183,7 +183,7 @@
           -webkit-text-fill-color: transparent;
           -moz-text-fill-color: transparent;
           background-size:200% 200%;     
-          animation: animatedText 3s infinite linear;
+          animation: animatedText 3s infinite alternate-reverse;
         }
 
         @keyframes animatedText {
