--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
         display: none;
         font-family: "Helvetica";
         font-style: normal;
-        font-weight: normal;
-        color: white;
         font-size: 74px;
         line-height: 85px;
         text-align: center;
@@ -128,8 +126,7 @@
           display: block;
           font-family: "Helvetica";
           font-style: normal;
-          font-weight: normal;
-          color: white;
+          color:white;
           font-size: 74px;
           line-height: 85px;
           text-align: center;
@@ -141,13 +138,11 @@
           font-family: "Helvetica";
           font-style: normal;
           font-weight: normal;
-          color: white;
           font-size: 74px;
           line-height: 85px;
           text-align: center;
         }
       }
-
       @media only screen and (max-width: 425px) {
         .flex-container {
           background-color: #050505;
@@ -166,9 +161,9 @@
           line-height: 50px;
         }
 
-        .stroke {
-        -webkit-text-stroke: 2px #ffffff;
-      }
+        /* .stroke {
+        -webkit-text-stroke: 2px #551ed6;
+      } */
 
         .gradient1 {
           font-family: Helvetica;
@@ -222,7 +217,6 @@
           color: #050505;
         }
       }
-
     </style>
   </head>
 
@@ -243,7 +237,7 @@
           <div><span class="stroke"> Century.</span></div>
       </div>
       <div class="content2">
-        Strategy, Design, Development, Business Automation, Consultancy.
+        Strategy, Design, Development, Business Automation, Consultancy
       </div>
     </div>
     <div style="max-width: 400px">
