--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       }
       .content2 {
         font-family: 'Gilroy-Medium';
-        font-size: 32px;
-        line-height: 37px;
+        font-size: 30px;
+        line-height: 35px;
         text-align: center;
         margin-top: 80px;
         color: #ffffff;
@@ -60,13 +60,13 @@
       }
 
       .gradient1 {
-        -webkit-text-stroke: 2px transparent;
+        -webkit-text-stroke: 1px transparent;
         font-family: Helvetica;
         font-style: normal;
         font-weight: 600;
         font-size: 74px;
         line-height: 85px;
-        background-image: linear-gradient(to bottom right, #f6d365 10%, #fda085 100%);
+        background-image: linear-gradient(to bottom right, #fda085 10%, #f6d365 100%);
         -webkit-background-clip: text;
         -moz-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -108,9 +108,9 @@
         text-align: center;
       }
 
-      .stroke {
+      /* .stroke {
         -webkit-text-stroke: 2px #ffffff;
-      }
+      } */
       
       .flex-container {
         display: flex;
@@ -119,6 +119,10 @@
         background-color: #050505;
         justify-content: center;
         align-items: center;
+      }
+
+      ::selection {
+        background: #f6d365;
       }
 
       @media only screen and (min-width:768px){
@@ -137,7 +141,7 @@
           display: block;
           font-family: "Helvetica";
           font-style: normal;
-          font-weight: normal;
+          font-weight: 600;
           font-size: 74px;
           line-height: 85px;
           text-align: center;
@@ -172,13 +176,13 @@
           font-weight: normal;
           font-size: 40px;
           line-height: 50px;
-          background-image: linear-gradient(to bottom right, #f6d365 10%, #fda085 100%);
-          -webkit-background-clip: text;
-          -moz-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          -moz-text-fill-color: transparent;
-          background-size:200% 200%;     
-          animation: animatedText 3s infinite alternate-reverse;
+          background-image: linear-gradient(to bottom right, #fda085 10%, #f6d365 100%);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-text-fill-color: transparent;
+        background-size:200% 200%;     
+        animation: animatedText 3s infinite alternate;
         }
 
         @keyframes animatedText {
