Gradient text color change on Selection

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         display: none;
         text-align: left;
       }
+
       .mob_view {
         display: none;
       
@@ -50,7 +51,8 @@
 
       ::selection {
         background: #f6d365;
-        color: #FFFFFF;
+        color: black;
+        -webkit-text-fill-color: white;
       }
 
       .web_content1 {
@@ -59,7 +61,7 @@
           font-style: normal;
           font-weight: 600;
           font-size: 74px;
-          line-height: 85px;
+          line-height: 90px;
           text-align: center;
           color: white;
         }
