--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         -webkit-text-fill-color: white;
       }
 
-      .webContent1 {
+      .webHeading {
         display: block;
         font-family: "Helvetica";
         font-style: normal;
@@ -68,7 +68,7 @@
         padding-left: 12px;
       }
 
-      .webContent2 {
+      .webDescription {
         font-family: "Gilroy-Medium";
         font-size: 30px;
         line-height: 35px;
@@ -124,7 +124,7 @@
         text-align: center;
       }
 
-      .mobileContent1 {
+      .mobileHeading {
         font-family: "Helvetica";
         font-style: normal;
         font-weight: normal;
@@ -166,7 +166,7 @@
         }
       }
 
-      .mobileContent2 {
+      .mobileDescription {
         font-family: "Gilroy-Medium";
         text-align: left;
         margin-top: 50px;
@@ -241,17 +241,17 @@
             justify-content: center;
           "
         >
-          <span class="webContent1 -webkit-text-stroke: 2px #ffffff;">We</span
+          <span class="webHeading -webkit-text-stroke: 2px #ffffff;">We</span
           ><span class="webGradient">Design </span
-          ><span class="webContent1 -webkit-text-stroke: 2px #ffffff;">& </span
+          ><span class="webHeading -webkit-text-stroke: 2px #ffffff;">& </span
           ><span class="webGradient">Build </span
-          ><span class="webContent1 -webkit-text-stroke: 2px #ffffff;"
+          ><span class="webHeading -webkit-text-stroke: 2px #ffffff;"
             >Digital</span
-          ><span class="webContent1">Products</span
-          ><span class="webContent1"> for the 21st Century.</span>
+          ><span class="webHeading">Products</span
+          ><span class="webHeading"> for the 21st Century.</span>
         </h1>
       </div>
-      <div class="webContent2">
+      <div class="webDescription">
         Strategy, Design, Development, Business Automation, Consultancy.
       </div>
       <div style="display: flex; align-items: center; justify-content: center">
@@ -260,17 +260,17 @@
     </div>
     <div class="mobolieView">
       <div>
-        <div class="mobileContent1">We</div>
+        <div class="mobileHeading">We</div>
         <div>
           <strong class="mobileGradient">Design</strong
-          ><strong class="mobileContent1"> & </strong
+          ><strong class="mobileHeading"> & </strong
           ><strong class="mobileGradient">Build</strong>
         </div>
-        <div><strong class="mobileContent1"> Digital Products</strong></div>
-        <div><strong class="mobileContent1">for the 21st</strong></div>
-        <div><strong class="mobileContent1"> Century.</strong></div>
+        <div><strong class="mobileHeading"> Digital Products</strong></div>
+        <div><strong class="mobileHeading">for the 21st</strong></div>
+        <div><strong class="mobileHeading"> Century.</strong></div>
       </div>
-      <div class="mobileContent2">
+      <div class="mobileDescription">
         Strategy, Design, Development, Business Automation, Consultancy
       </div>
       <div style="max-width: 400px">
