--- a/index.html
+++ b/index.html
@@ -64,10 +64,6 @@
         color: white;
       }
 
-      span {
-        padding-left: 12px;
-      }
-
       .webDescription {
         font-family: "Gilroy-Medium";
         font-size: 30px;
@@ -241,40 +237,54 @@
             justify-content: center;
           "
         >
-          <span class="webHeading -webkit-text-stroke: 2px #ffffff;">We</span
-          ><span class="webGradient">Design </span
-          ><span class="webHeading -webkit-text-stroke: 2px #ffffff;">& </span
-          ><span class="webGradient">Build </span
-          ><span class="webHeading -webkit-text-stroke: 2px #ffffff;"
+          <span
+            class="webHeading -webkit-text-stroke: 2px #ffffff;"
+            style="padding-left: 12px"
+            >We</span
+          ><span class="webGradient" style="padding-left: 12px">Design </span
+          ><span
+            class="webHeading -webkit-text-stroke: 2px #ffffff;"
+            style="padding-left: 12px"
+            >& </span
+          ><span class="webGradient" style="padding-left: 12px">Build </span
+          ><span
+            class="webHeading -webkit-text-stroke: 2px #ffffff;"
+            style="padding-left: 12px"
             >Digital</span
-          ><span class="webHeading">Products</span
-          ><span class="webHeading"> for the 21st Century.</span>
+          ><span class="webHeading" style="padding-left: 12px">Products</span
+          ><span class="webHeading" style="padding-left: 12px">
+            for the 21st Century.</span
+          >
         </h1>
       </div>
       <div class="webDescription">
         Strategy, Design, Development, Business Automation, Consultancy.
       </div>
       <div style="display: flex; align-items: center; justify-content: center">
-        <div class="webButton"><span class="webButtonText">Get in touch</span></div>
+        <div class="webButton">
+          <span class="webButtonText">Get in touch</span>
+        </div>
       </div>
     </div>
     <div class="mobolieView">
       <div>
         <div class="mobileHeading">We</div>
         <div>
-          <strong class="mobileGradient">Design</strong
-          ><strong class="mobileHeading"> & </strong
-          ><strong class="mobileGradient">Build</strong>
+          <span class="mobileGradient">Design</span
+          ><span class="mobileHeading"> & </span
+          ><span class="mobileGradient">Build</span>
         </div>
-        <div><strong class="mobileHeading"> Digital Products</strong></div>
-        <div><strong class="mobileHeading">for the 21st</strong></div>
-        <div><strong class="mobileHeading"> Century.</strong></div>
+        <div><span class="mobileHeading"> Digital Products</span></div>
+        <div><span class="mobileHeading">for the 21st</span></div>
+        <div><span class="mobileHeading"> Century.</span></div>
       </div>
       <div class="mobileDescription">
         Strategy, Design, Development, Business Automation, Consultancy
       </div>
       <div style="max-width: 400px">
-        <div class="mobileButton"><span class="mobileButtonText">Get in touch</span></div>
+        <div class="mobileButton">
+          <span class="mobileButtonText">Get in touch</span>
+        </div>
       </div>
     </div>
   </body>
